systems/network/ingress/all/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    ingress.cilium.io/tls-passthrough: enabled
    ingress.cilium.io/force-https: enabled
spec:
  ingressClassName: cilium
  rules:
    - host: argocd.k8s.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
