systems/network/ingress/all/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: cilium-monitoring
spec:
  ingressClassName: cilium
  rules:
    - host: grafana.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
